tests/blob/field_get_faulty.sy
A :: blob { a: int }
a := A { a: 1 }

start :: fn do
    a.b = a.b + 1
    a.a = f' a.b
end

f :: fn a:int -> int do
    ret a
end
// error: $UnknownField {..}
// error: $UnknownField {..}
